# WeKnora

./: .env.example  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml
.github/workflows/: cli.yml  docker-image.yml  release-lite.yml
cli/: go.mod  go.sum
cli/acceptance/: doc.go
cli/acceptance/contract/: errorcodes_test.go  helpers_test.go
cli/cmd/: root.go
cli/cmd/auth/: auth.go  auth_test.go  login.go  login_test.go  status.go  status_test.go
cli/cmd/init/: init.go  init_test.go
cli/cmd/link/: link.go  link_test.go
cli/internal/cmdutil/: errors.go  errors_codes_test.go  (+4 more)
client/: auth.go  client.go  knowledge.go  knowledgebase.go  log.go  session.go
docker/searxng/: settings.yml
docreader/: README.md  pyproject.toml
docs/: CHUNKING.md
docs/zh/: mcp-approval.md
frontend/: nginx.conf
frontend/src/: App.vue
internal/agent/: act.go  engine.go  observe.go  observe_test.go  think.go
internal/config/: config.go
internal/container/: container.go
internal/event/: event.go  event_data.go
internal/handler/: mcp_service.go  system.go  wiki_page.go
internal/router/: router.go  router_files_test.go
internal/types/: agent.go  chat.go  custom_agent.go  mcp.go  web_search_provider.go  wiki_page.go
internal/utils/: security.go
migrations/sqlite/: 000000_init.down.sql  000000_init.up.sql
migrations/versioned/: 000042_mcp_tool_approval.down.sql  000042_mcp_tool_approval.up.sql
scripts/cloud-image/: README.md  cleanup.sh  firstboot.sh  prepare.sh
(+101 files in other folders)
