[project]
name = "docreader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.18"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "grpcio>=1.76.0",
    "grpcio-health-checking>=1.76.0",
    "grpcio-tools>=1.76.0",
    "lxml>=6.1.0",
    "markitdown[docx,pdf,xls,xlsx]>=0.1.3",
    "pillow>=12.0.0",
    "playwright>=1.55.0",
    "protobuf>=6.33.0",
    "pydantic>=2.12.3",
    "pypdf>=6.1.3",
    "pypdfium2>=5.0.0",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "textract==1.5.0",
    "trafilatura>=2.0.0",
]
